<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mayanktechnologies.alarmmanager.About_Activity">

<android.support.v7.widget.CardView
    android:layout_width="0dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginTop="@dimen/about_margin_top"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/cardview_developer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_margin_top"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/about_margin_left"
                    android:textColor="@android:color/black"
                    android:text="@string/developer_name"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:layout_marginTop="@dimen/about_margin_top"
                    android:textSize="@dimen/about_name_teztsize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/about_margin_left"
                    android:layout_marginBottom="@dimen/about_role_margin_bottom"
                    android:text="@string/developer"
                    android:textColor="@android:color/black"
                    android:typeface="serif"
                    android:textSize="@dimen/about_role_textsize" />

            </LinearLayout>
            <FrameLayout
                android:layout_weight="3.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/imageview_developer"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/fb_badge_size"
                    android:layout_height="@dimen/fb_badge_size"
                    android:src="@drawable/fb_badge"/>
            </FrameLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

    </LinearLayout>
</android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:id="@+id/cardview_designer"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardview_developer"
    android:layout_marginTop="@dimen/about_margin_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_margin_top"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_margin_left"
            android:textColor="@android:color/black"
            android:text="@string/designer_name"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_marginTop="@dimen/about_margin_top"
            android:textSize="@dimen/about_name_teztsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_margin_left"
            android:layout_marginBottom="@dimen/about_role_margin_bottom"
            android:text="@string/designer"
            android:textColor="@android:color/black"
            android:typeface="serif"
            android:textSize="@dimen/about_role_textsize" />

    </LinearLayout>
        <FrameLayout
            android:layout_weight="3.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imageview_designer"
                android:layout_gravity="center"
                android:layout_width="@dimen/fb_badge_size"
                android:layout_height="@dimen/fb_badge_size"
                android:src="@drawable/fb_badge"/>
        </FrameLayout>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

    </LinearLayout>
</android.support.v7.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/about_role_textsize"
        android:textColor="@android:color/black"
        android:text="@string/build_version"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
